welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type unit
def dance(test:String):unit= {
                       ^